@@ -1,4 +1,5 @@
 use ExtUtils::MakeMaker;
+use Config;
 use strict;
 
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
@@ -7,21 +8,37 @@ use strict;
 my $name = 'BLADE';
 my $distname = 'pBLADE';
 
-my $cflags = `libblade-config --cflags`;
-chomp $cflags;
+# Objects to be combined into the shared library.
+my @objects = qw(
+		 BLADE.o
+		 blade_obj_simple_init.o
+		 blade_run.o
+		 blade_theme_simple_init.o
+		 util.o
+		 );
 
-my $libs = `libblade-config --libs`;
-chomp $libs;
+# Extra compile parameters needed.
+open(CONFIG,"libblade-config --cflags --libs |") or
+    die "Could not execute libblade-config: $!";
+my ($cflags, $libs) = <CONFIG>;
+close CONFIG;
 
-my $blade_prefix = `blade-config --prefix`;
-chomp $blade_prefix;
+# Location of BLADE files.
+open(CONFIG,"blade-config --prefix |") or
+    die "Could not execute blade-config: $!";
+my $blade_prefix = <CONFIG>;
+close CONFIG;
+
+chomp ($cflags, $libs, $blade_prefix);
+
+my $perl_prefix=$Config{prefix};
 
 my $pmfile = $name.'.pm';
 my $specfile = $distname.'.spec';
 my $version = get_version($pmfile);
 
 # create spec file before WriteMakefile(), since it is listed in MANIFEST
-write_spec_file($distname, $version, $blade_prefix, $specfile);
+write_spec_file($distname, $version, $Config{prefix}, $specfile);
 
 WriteMakefile(
     'NAME'	=> $name,
@@ -30,7 +47,7 @@ WriteMakefile(
     'LIBS'	=> [$libs],
     'DEFINE'	=> '',
     'INC'	=> $cflags,
-    'OBJECT' => 'BLADE.o blade_obj_simple_init.o blade_run.o blade_theme_simple_init.o util.o',
+    'OBJECT' => join(' ',@objects),
     'dist' => { 'COMPRESS' => 'gzip -f --best' },
 );
 
@@ -39,20 +56,40 @@ exit 0;
 # create the rpm, special document targets
 sub MY::postamble {
 
-    my $doc_dir = "$blade_prefix/doc/blade/pBLADE";
+    my $doc_dir = "\$(install_prefix)/$blade_prefix/doc/blade/pBLADE";
+
+    my $pod2text = "$Config{prefix}/bin/pod2text";
+    (-x $pod2text) or $pod2text = undef;
+    my $pod2html = "$Config{prefix}/bin/pod2html";
+    (-x $pod2html) or $pod2html = undef;
+
     my @doc_files = ('README', 'ChangeLog', 'LICENSE', $specfile);
+
+    $pod2text and push @doc_files, "$distname.txt";
+    $pod2html and push @doc_files, "$distname.html";
 
     my $postamble = <<EOP;
 rpm: dist
 	rpm -ta $distname-$version.tar.gz
 
-install :: mydocs
+install :: install_mydocs
 
-mydocs:
+uninstall :: uninstall_mydocs
+
+install_mydocs: uninstall_mydocs
+EOP
+    $pod2text and $postamble .= "\t$pod2text $pmfile > $distname.txt\n";
+    $pod2html and $postamble .= "\t$pod2html $pmfile > $distname.html\n";
+    $postamble .= <<EOP;
 	\$(MKPATH) $doc_dir
 EOP
     foreach my $file (@doc_files) {
-	$postamble .= "\t\$(CP) $file $doc_dir\n";
+	$postamble .= "\t\$(CP) $file $doc_dir/$file\n";
+    }
+
+    $postamble .= "\nuninstall_mydocs:\n";
+    foreach my $file (@doc_files) {
+	$postamble .= "\t\$(RM_F) $doc_dir/$file\n";
     }
 
     return $postamble;
@@ -60,23 +97,21 @@ EOP
 
 
 # function for writing an rpm spec file
-sub write_spec_file {
+sub write_spec_file($$$$) {
     my ($distname, $version, $prefix, $outfile) = @_;
 
     open(SPEC,">$outfile") or die "Could not open output spec file '$outfile': $!";
     print SPEC <<EOP;
 # Note that this is NOT a relocatable package
-\%define ver      $version
 \%define rel      1
-\%define prefix   $prefix
 
-Summary:   $distname
+Summary:   Write BLADE applications in Perl
 Name:      $distname
-Version:   \%ver
+Version:   $version
 Release:   \%rel
 License:   GPL or Artistic License
 Group:     Development/Libraries
-Source:    $distname-\%{ver}.tar.gz
+Source:    $distname-$version.tar.gz
 URL:       http://www.thestuff.net/bob/projects/blade
 BuildRoot: /tmp/$distname-\%{PACKAGE_VERSION}-root
 Packager:  Pete Ratzlaff <pratzlaff\@cfa.harvard.edu>
@@ -89,14 +124,14 @@ $distname is a Perl interface to the BLADE web development environment.
 \%prep
 
 \%setup
-perl Makefile.PL PREFIX=\$RPM_BUILD_ROOT\%{prefix}
+perl Makefile.PL PREFIX=\$RPM_BUILD_ROOT$prefix
 
 \%build
 make
 
 \%install
 rm -rf \$RPM_BUILD_ROOT
-make install
+make install install_prefix=\$RPM_BUILD_ROOT
 
 \%clean
 rm -rf \$RPM_BUILD_ROOT
@@ -109,11 +144,11 @@ EOP
 }
 
 # not pretty, but gets the job done
-sub get_version {
+sub get_version($) {
     my $pmfile = shift;
 
     open(PMFILE,$pmfile) or die "Could not open file '$pmfile': $!";
-    my @lines = grep /^\$VERSION\s*=\s*\'.*\'/, <PMFILE> or
+    my @lines = grep /^\s*\$VERSION\s*=\s*\'.*\'/, <PMFILE> or
 	die "No version found in file '$pmfile'";
 
     my $version;
