@@ -1,15 +1,13 @@
 # Note that this is NOT a relocatable package
-%define ver      0.05
 %define rel      1
-%define prefix   /usr/local
 
-Summary:   pBLADE
+Summary:   Write BLADE applications in Perl
 Name:      pBLADE
-Version:   %ver
+Version:   0.06
 Release:   %rel
 License:   GPL or Artistic License
 Group:     Development/Libraries
-Source:    pBLADE-%{ver}.tar.gz
+Source:    pBLADE-0.06.tar.gz
 URL:       http://www.thestuff.net/bob/projects/blade
 BuildRoot: /tmp/pBLADE-%{PACKAGE_VERSION}-root
 Packager:  Pete Ratzlaff <pratzlaff@cfa.harvard.edu>
@@ -22,14 +20,14 @@ pBLADE is a Perl interface to the BLADE web development environment.
 %prep
 
 %setup
-perl Makefile.PL PREFIX=$RPM_BUILD_ROOT%{prefix}
+perl Makefile.PL PREFIX=$RPM_BUILD_ROOT/opt/local
 
 %build
 make
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make install
+make install install_prefix=$RPM_BUILD_ROOT
 
 %clean
 rm -rf $RPM_BUILD_ROOT
